[tool.poetry]
name = "eventbusk"
version = "0.1.0"
description = "Event bus with Kafka"
authors = ["Airbase Inc <developers@airbase.io>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^1.6.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["django"]
line_length = 88
multi_line_output = 3

[tool.pylint.master]

[tool.pylint.format]
max-line-length = 88
max-module-lines = 1000
single-line-class-stmt = "no"
single-line-if-stmt = "no"

[tool.pylint.messages_control]
disable = [
    "logging-fstring-interpolation",
]
