[tool.poetry]
name = "eventbusk"
version = "0.1.0"
description = "Event bus with Kafka"
authors = ["Airbase Inc <developers@airbase.io>"]

[tool.poetry.dependencies]
python = "^3.9"
click = ">=7"
confluent-kafka = "^1.6"
cotyledon = "^1.7"

[tool.poetry.dev-dependencies]
pre-commit = "2.13.0"
pytest = "6.2.4"
pytest-cov = "2.12.1"
pytest-mock = "3.6.1"
pytest-socket = "0.4.0"
pytest-xdist = "2.2.1"
taskipy = "1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eventbusk = "eventbusk.cli:cli"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
files = ["eventbusk"]
allow_redefinition = false
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
local_partial_types  = false
no_implicit_optional = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_none_errors = true
strict_equality = true
strict_optional = true
verbosity = 0
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.master]
bad-functions = ["print"]
jobs = 1
max-complexity = 10
suggestion-mode = "yes"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 1000
single-line-class-stmt = "no"
single-line-if-stmt = "no"

[tool.pylint.design]
max-args = 5
max-attributes = 7
max-bool-expr = 5
max-branches = 15
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 60
min-public-methods = 1

[tool.pylint.refactoring]
max-nested-blocks = 5

[tool.pylint.similarities]
min-similarity-lines = 15

[tool.pylint.messages_control]
disable = [
    "fixme",
    "logging-fstring-interpolation",
]

[tool.pylint.reports]
output-format = "colorized"
score = "yes"

[tool.pytest.ini_options]
addopts = "--disable-socket"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "./docs/*",
    ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    ]
ignore_errors = true
precision = 2
skip_empty = true
skip_covered = true
show_missing = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.taskipy.tasks]
test = "pytest --cov=. --cov-config=pyproject.toml --no-cov-on-fail"
coverage = "coverage report --rcfile=pyproject.toml"
coverage_report = "coverage report --rcfile=pyproject.toml"
coverage_html = "coverage html --rcfile=pyproject.toml"
